+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.3.1?
===========================

*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- Bug #795506:  The % formatting operator did not support '%F' as
  had been documented.

- Bug #775985: Only set stdout.encoding if a codec is available.

Extension modules
-----------------

- Bug #698282: Add __file__ to dynamic modules in multiple interpreters.

- Patch #798145: Return correct information from nl_langinfo(RADIXCHAR).

- Bug #797447: Correct confusing error message for unsupported locales.

- Patch #798534:  fixed memory leak in os.popen().

- Bug #793826:  re-ordered the reference counting code in
  itertools.izip() to prevent re-entrancy anomalies.  Also,
  if given zero arguments, it now returns an empty iterator
  rather than raising a type error.

- Bug #770485: cStringIO did not support the f.closed attribute.

- Patch #781722: Gracefully reject AF_INET6 in socket.inet_pton
  if IPv6 is disabled.

- Bug #783312: Release host name memory in socket calls.

Library
-------

- Bug #453515:  filecmp.dircmp() can now make case insensitive
  filename comparisons.

- Bug #798254:  doctest.py can now handle unbound methods.

- Bug #797650:  textwrap.py now avoids an infinite loop when one of the
  indent arguments is set longer than the total width.

- Bug #796149: time.strptime() now handles having parentheses in the
  format string properly.

- The email package handles some RFC 2231 parameters with missing
  CHARSET fields better.  It also includes a patch to parameter
  parsing when semicolons appear inside quotes.

- sets.py now runs under Py2.2.  In addition, the argument restrictions
  for most set methods (but not the operators) have been relaxed to
  allow any iterable.  Also the Set.update() has been deprecated because
  it duplicates Set.union_update().
